--- a/DjangoDB02/todoApp/todo_list/Templates/base.html
+++ b/DjangoDB02/todoApp/todo_list/Templates/base.html
@@ -21,7 +21,7 @@
           </ul>
           <form class="d-flex" role="search" method="post">
             {% csrf_token %}
-            <input class="form-control me-2" type="search" placeholder="Add todo item " aria-label="Search"/>
+            <input class="form-control me-2" type="search" placeholder="Add todo item " aria-label="Search" name="title"/>
             <button class="btn btn-outline-success" type="submit">Adicionar</button>
           </form>
         </div>
